--- a/bitget-java-sdk-api/pom.xml
+++ b/bitget-java-sdk-api/pom.xml
@@ -20,6 +20,7 @@
         <commons-codec-version>1.14</commons-codec-version>
         <junit-version>4.12</junit-version>
         <commons-collections4>4.4</commons-collections4>
+        <google-guava>27.1-jre</google-guava>
     </properties>
 
     <dependencies>
@@ -82,6 +83,16 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${junit-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${google-guava}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+            <version>1.18</version>
         </dependency>
     </dependencies>
 
