--- a/bitget-java-sdk-api/pom.xml
+++ b/bitget-java-sdk-api/pom.xml
@@ -94,6 +94,11 @@
             <artifactId>commons-compress</artifactId>
             <version>1.18</version>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.3.0-alpha4</version>
+        </dependency>
     </dependencies>
 
     <build>
