--- a/bitget-node-sdk-api/package.json
+++ b/bitget-node-sdk-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bitget-openapi",
+  "name": "bitget-api-node-sdk",
   "version": "2.0.9",
   "description": "",
   "main": "build/index.js",
